[build-system]
requires = ["pdm-backend >= 2.4.0", "setuptools>=68", "wheel"]
build-backend = "pdm.backend"

[project]
name = "zeroheliumkit"
version = "0.5.5"
authors = [
  { name="Niyaz Beysengulov", email="nbeysengulov@eeroq.com" },
]
description = "--"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/eeroqlab/zeroheliumkit"

[tool.setuptools]
packages = { find = { include = ['src', 'helpers', 'fem'] } }
